--- a/styles/assets.css
+++ b/styles/assets.css
@@ -306,7 +306,7 @@ input:checked+.slider:before {
     height: 30px;
 }
 
-@media(min-width: 320px) and (max-width: 1200px) {
+@media(min-width: 320px) and (max-width: 1325px) {
     .logo_img {
         height: 32px;
         width: 80px;
@@ -322,6 +322,60 @@ input:checked+.slider:before {
         top: 290px;
         height: 120px;
         width: 120px;
+    }
+
+    .dish_icon {
+        width: 60px;
+        height: 60px;
+        top: -48px;
+    }
+
+    .dish_img {
+        width: 100%;
+        height: 88px;
+    }
+
+    .add_order_button {
+        padding: 0;
+    }
+
+    .order_button {
+        padding: 8px 16px;
+        font-size: 24px;
+    }
+
+    .order_button_content {
+        padding: 0 0;
+    }
+
+    .close_button_content {
+        display: flex;
+        align-items: center;
+        justify-content: end;
+        width: 100%;
+    }
+
+    .close_button_none {
+        display: block;
+    }
+}
+
+@media(min-width: 0px) and (max-width: 319px) {
+    .logo_img {
+        height: 16px;
+        width: 40px;
+    }
+
+    .hero_background_img {
+        margin-top: 24px;
+        height: 160px;
+        border-radius: 16px;
+    }
+
+    .burger_logo_img {
+        top: 160px;
+        height: 64px;
+        width: 64px;
     }
 
     .dish_icon {
